FIX: mobile dialog should overflow auto

--- a/styles/dialog.scss
+++ b/styles/dialog.scss
@@ -93,4 +93,5 @@
 	width: auto!important;
 	height: auto!important;
 	margin: 0!important;
+	overflow: auto;
 }
